--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="buttons-container">
-                    <button class="inline-block">Curriculum Vitae</button>
-                    <button class="inline-block">Contrate-me</button>
+                    <a target="_blank" href="#"><button class="inline-block">Curriculum</button></a>
+                    <a target="_blank" href="https://github.com/danielfsousa"><button class="inline-block sticky">Github</button></a>
                 </div>
             </div>
         </div>
@@ -210,6 +210,7 @@
                 </div>
 
                 <div class="col-md-12">
+                    <p id="feedbackForm"></p>
                     <button type="submit" class="pull-right">Enviar</button>
                 </div>
             </div>
