Adiciona legendas nas imagens do portfolio Adiciona ícones sociais Conserta espaçamento nos celulares

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="Author" content="Daniel Sousa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="icon" href="img/favicon.png">
@@ -101,7 +102,7 @@
             <div class="col-md-12">
                 <div class="buttons-container">
                     <a target="_blank" href="#"><button class="inline-block">Curriculum</button></a>
-                    <a target="_blank" href="https://github.com/danielfsousa"><button class="inline-block sticky">Github</button></a>
+                    <a target="_blank" href="https://github.com/danielfsousa"><button class="inline-block ultimo">Github</button></a>
                 </div>
             </div>
         </div>
@@ -134,48 +135,56 @@
             <div class="col-md-3 col-sm-2">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg')">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                        <span>Título</span>
                     </div>
                 </a>
             </div>
@@ -228,7 +237,13 @@
 
 <footer>
     <div class="row">
-        <div id="social"></div>
+        <div id="social">
+            <a target="_blank" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
+            <a target="_blank" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
+            <a target="_blank" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
+            <a target="_blank" href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
+        </div>
 
         <div id="copyright">
             <p>©2016 - Desenvolvido por: <span>Daniel Sousa</span></p>
