Adiciona um título aos links de redes sociais

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
 <footer>
     <div class="row">
         <div id="social">
-            <a target="_blank" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
-            <a target="_blank" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
-            <a target="_blank" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
-            <a target="_blank" href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
+            <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
+            <a target="_blank" title="Facebook" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
+            <a target="_blank" title="Linkedin" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
+            <a target="_blank" title="Github" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
+            <a target="_blank"title="Email"  href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
         </div>
 
         <div id="copyright">
