--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <input type="text" placeholder="Seu Nome">
+                    <input type="text" name="nome" placeholder="Seu Nome">
                 </div>
 
                 <div class="col-md-6">
-                    <input type="email" placeholder="Seu Email">
+                    <input type="email" name="email" placeholder="Seu Email">
                 </div>
 
                 <div class="col-md-12">
