Adiciona efeito slide out no footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
-    <meta name="Description" content="Web Developer & Web Designer">
+    <meta name="Description" content="Daniel Sousa - Web Developer & Web Designer">
     <meta name="Author" content="Daniel Sousa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -234,7 +234,6 @@
 
 </section>
 
-
 <footer>
     <div class="row">
         <div id="social">
@@ -244,6 +243,7 @@
             <a target="_blank" title="Github" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
             <a target="_blank"title="Email"  href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
         </div>
+
 
         <div id="copyright">
             <p>©2016 - Desenvolvido por: <span>Daniel Sousa</span></p>
