Altera sub-heading Altera tamanho do ícone hamburger

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div id="call-to-action" class="fading">
             <h1><span>Daniel Sousa</span></h1>
-            <h6>Web Developer <span>/</span> Web Designer</h6>
+            <h6>Full stack Developer <span>/</span> UI & UX Designer</h6>
 
         </div>
         <div id="arrow"><i class="glyphicon glyphicon-chevron-down"></i></div>
