Altera estrutura Adiciona animações

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
             <div class="col-md-12">
                 <div class="buttons-container">
                     <a target="_blank" href="#"><button class="inline-block">Curriculum</button></a>
-                    <a target="_blank" href="https://github.com/danielfsousa"><button class="inline-block ultimo">Github</button></a>
                 </div>
             </div>
         </div>
@@ -110,7 +109,7 @@
     </div>
 </section>
 
-<section id="quote">
+<!--<section id="quote">
     <div class="row">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -119,6 +118,14 @@
 
         <h6 id="quote-author">- Abraham Lincoln / 16th President U.S.A.</h6>
     </div>
+</section>-->
+
+<section class="social no-margin">
+    <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
+    <a target="_blank" title="Facebook" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
+    <a target="_blank" title="Linkedin" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
+    <a target="_blank" title="Github" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
+    <a target="_blank"title="Email"  href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
 </section>
 
 <section id="portfolio">
@@ -135,56 +142,64 @@
             <div class="col-md-3 col-sm-2">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg')">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <a href="http://santaritadf.com.br">
                     <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                        <span>Título</span>
+                        <span class="titulo">Título</span>
+                        <span class="subtitulo">Desenvolvimento html, css e javascript</span>
                     </div>
                 </a>
             </div>
@@ -236,7 +251,7 @@
 
 <footer>
     <div class="row">
-        <div id="social">
+        <div class="social">
             <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
             <a target="_blank" title="Facebook" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
             <a target="_blank" title="Linkedin" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
