Refatora js Passa a responsabilidade de renderização das animações para a gpu Adiciona animações no hamburger e no menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="icon" href="img/favicon.png">
     <title>Daniel Sousa</title>
     <!--CDN link for  TweenMax-->
@@ -42,7 +41,7 @@
                     </a>
                 </ul>
 
-                <div id="nav-full" class="hidden">
+                <div id="nav-full">
                     <div class="ul-container">
                         <ul class="ul-full">
                             <a href="#">
@@ -86,7 +85,7 @@
             </div>
 
             <div class="row">
-                <img src="img/DanielSousa.png" alt="Daniel Sousa" class="center-block">
+                <img id="foto" src="img/DanielSousa.png" alt="Daniel Sousa" class="center-block">
             </div>
 
             <div class="row">
@@ -113,17 +112,6 @@
 
         </div>
     </section>
-
-    <!--<section id="quote">
-    <div class="row">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur.</p>
-
-        <h6 id="quote-author">- Abraham Lincoln / 16th President U.S.A.</h6>
-    </div>
-</section>-->
 
     <section class="social no-margin">
         <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
@@ -266,7 +254,7 @@
 
 
             <div id="copyright">
-                <p>©2016 - Desenvolvido por: <span>Daniel Sousa</span></p>
+                <p>©2015 - Desenvolvido por: <span>Daniel Sousa</span></p>
             </div>
         </div>
     </footer>
@@ -278,7 +266,7 @@
         crossorigin="anonymous"></script>
     <script src="js/form.js"></script>
     <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
-    <script src="js/functions.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
