Exclui campos desnecessários

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Hind:200,300|Montserrat:400,600" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/favicon.png">
     <title>Daniel Sousa</title>
@@ -115,7 +116,6 @@
 
     <section class="social no-margin">
         <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
-        <a target="_blank" title="Facebook" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
         <a target="_blank" title="Linkedin" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
         <a target="_blank" title="Github" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
         <a target="_blank" title="Email" href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
@@ -246,7 +246,6 @@
         <div class="row">
             <div class="social">
                 <a target="_blank" title="Twitter" href="http://twitter.com/dani2ousa"><i class="fa fa-twitter"></i></a>
-                <a target="_blank" title="Facebook" href="http://facebook.com/danielfsousa"><i class="fa fa-facebook"></i></a>
                 <a target="_blank" title="Linkedin" href="https://www.linkedin.com/in/daniel-ferreira-de-sousa-7731ba102"><i class="fa fa-linkedin"></i></a>
                 <a target="_blank" title="Github" href="https://github.com/danielfsousa"><i class="fa fa-github"></i></a>
                 <a target="_blank" title="Email" href="mailto:sousa.dfs@gmail.com"><i class="fa fa-envelope-o"></i></a>
@@ -254,7 +253,7 @@
 
 
             <div id="copyright">
-                <p>©2015 - Desenvolvido por: <span>Daniel Sousa</span></p>
+                <p>© 2015 - Desenvolvido por: <span>Daniel Sousa</span></p>
             </div>
         </div>
     </footer>
