--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <section id="portfolio">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="title">
                     <h2>Portfólio</h2>
@@ -130,74 +130,72 @@
                     <div class="separator"></div>
                 </div>
             </div>
+        </div>
 
-            <div class="row no-gutters">
-                <div class="col-md-3 col-sm-2">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg')">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+        <div class="flex">
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg')">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/santarita.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/atitudedeprincesa.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="http://santaritadf.com.br">
-                        <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
-                            <span class="titulo">Título</span>
-                            <span class="subtitulo">Desenvolvimento html, css e javascript</span>
-                        </div>
-                    </a>
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
                 </div>
-            </div>
-
+            </a>
+            <a href="http://santaritadf.com.br" class="flex__item">
+                <div class="thumb" style="background-image: url('img/portfolio/masterphoto.jpg');">
+                    <div class="thumb__titulo">Título</div>
+                    <div class="thumb__separator"></div>
+                    <div class="thumb__subtitulo">Desenvolvimento html, css e javascript</div>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -253,7 +251,8 @@
 
 
             <div id="copyright">
-                <p>© 2015 - Desenvolvido por: <span>Daniel Sousa</span></p>
+                <i class="fa fa-heart text-danger"></i> 
+                <i class="fa fa-code"></i>
             </div>
         </div>
     </footer>
